--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home</title>
+    <title>Home</title>S
     <link rel="icon" type="image/png" href="images/LL_icon.png" size="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,7 +19,6 @@
             <img src="images/LL_icon.png" id="icon" />
             <a href="index.html" class="w3-bar-item w3-button">Home</a>
             <a href="events.html" class="w3-bar-item w3-button">Events</a>
-            <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
             <a href="rides.html" class="w3-bar-item w3-button">Carpool</a>
         </div>
     </nav>
