--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home</title>S
+    <title>Home</title>
     <link rel="icon" type="image/png" href="images/LL_icon.png" size="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -49,7 +49,7 @@
         <div class="flex-container2">
             <p id="date"></p>
 
-            <script defer>
+            <script>
                 // JS code to display the current date, and set the text color to red
                 const d = new Date();
                 let test = document.getElementById("date");
