--- a/rides.html
+++ b/rides.html
@@ -56,7 +56,7 @@
                 </datalist>
                 </select>
             </div>
-            <input type="submit" value="Submit" id="submit" style="margin-top:10px;" onclick='addCapacity(); displayName(); reserveSpot(); removeForm(); resetForm(); event.preventDefault();' />
+            <input type="submit" value="Submit" id="submit" style="margin-top:10px;" onclick='addCapacity(); reserveSpot(); removeForm(); resetForm(); event.preventDefault();' />
         </form>
         <p id="displayName"></p>
         </div>
