--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="index.html" class="w3-bar-item w3-button">Home</a>
             <a href="events.html" class="w3-bar-item w3-button">Events</a>
             <a href="rides.html" class="w3-bar-item w3-button">Carpool</a>
+            <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
         </div>
     </nav>
 
