--- a/rides.html
+++ b/rides.html
@@ -20,6 +20,7 @@
             <a href="index.html" class="w3-bar-item w3-button">Home</a>
             <a href="events.html" class="w3-bar-item w3-button">Events</a>
             <a href="rides.html" class="w3-bar-item w3-button">Carpool</a>
+            <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
         </div>
     </nav>
 
@@ -30,7 +31,7 @@
             Every Sunday, we coordinate rides to make sure that everyone who wants to come to church can come. Whether you need a ride, or can give a ride, please 
             fill out the form below so that we can fit you into our plans!
         </p>
-        <p id="current"></p>
+        <p id="current"> </p>
         <form id="myForm">
             <p>Choose one:</p>
             <input type="radio" id="give" name="ride" value="Give Rides" onclick="removeForm(), displayDriverForm()">
@@ -72,7 +73,7 @@
         </div>
     </footer>
 
-    <script src="proj3.js"></script>
+    <script src="proj6.js"></script>
 </body>
 
 </html>
