--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<!-- Part 2 of Project 6 is at the bottom of this file-->
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -19,6 +21,7 @@
                 <a href="index.html" class="w3-bar-item w3-button">Home</a>
                 <a href="events.html" class="w3-bar-item w3-button">Events</a>
                 <a href="rides.html" class="w3-bar-item w3-button">Carpool</a>
+                <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
             </div>
         </nav>
 
@@ -27,22 +30,55 @@
                 <h1 id="welcome" class="w3-theme1">Contact Us!</h1>
 
             <p>If you have any questions, or would like to get involved, please do not hesitate to reach out! We will get 
-                back to you as soon as possible, and we can't wait to meet you!
+                back to you as soon as possible, and we can't wait to meet you! Enter your information below so we can get in touch with you!
             </p>
 
-            <form>
-                <label for="contact">Choose a contact method:</label>
-                <select id="contact" name="contact">
-                    <option value="phone">Phone</option>
-                    <option value="email">Email</option>
-                </select>
-                <br><br>
+            <form name="contact_form" id="contact_form" onsubmit="return validateForm()">
+                <label>Full Name:</label>
+                <input type="text" name="fname" id="fname" placeholder="First Name" required>
+                <input type="text" name="lname" id="lname" placeholder="Last Name" required><br>
 
-                <label for="contact">Input your phone or email:</label>
-                <input type="text" id="contact" name="Contact"><br>
-                <textarea rows="4" cols="50" id="comment" placeholder="Why are you contacting us?"></textarea><br>
-                <input type="submit" value="Submit" style="margin: 5px;">
-            </form>
+                <fieldset class="contact_forms">
+                    <legend>Select your church background</legend>
+                    <input type="checkbox" name="synod" id="lcms">
+                    <label for="lcms">LCMS</label><br>
+                    <input type="checkbox" name="synod" id="elca">
+                    <label for="elca">ELCA</label><br>
+                    <input type="checkbox" name="synod" id="wels">
+                    <label for="wels">WELS</label><br>
+                    <input type="checkbox" name="synod" id="not">
+                    <label for="not">Not Lutheran</label><br>
+                    <input type="checkbox" name="synod" id="other">
+                    <label for="other">Other</label><br>
+                </fieldset>
+
+                <fieldset class="contact_forms">
+                    <legend>Select a contact method</legend>
+                    <input type="radio" name="method" id="uemail" onclick="removeContactForm(); displayEmail()" required>
+                    <label for="uemail">Email</label><br>
+                    <input type="radio" name="method" id="uphone" onclick="removeContactForm(); displayPhone()" required>
+                    <label for="uphone">Phone</label><br>
+                </fieldset>
+
+                <fieldset name="email_field" class="contact_forms" style="display:none">
+                    <legend>Enter your email</legend>
+                    <input type="email" name="user_email" id="user_email">
+                </fieldset>
+
+                <fieldset name="phone_field" class="contact_forms" style="display:none">
+                    <legend>Enter your phone number</legend>
+                    <input type="tel" name="user_phone" id="user_phone">
+                </fieldset>
+
+                <fieldset name="year" class="contact_forms">
+                    <legend>Select your expected graduation date</legend>
+                    <input type="month" name="graddate">
+                </fieldset>
+
+                <input type="submit" value="Submit">
+
+                <label id="errors" style="color:red;"> </label>
+            </form> 
             </div>
         </div>
 
@@ -56,6 +92,25 @@
                 <a href="https://www.lcms.org/" class="w3-bar-item w3-button" target="_blank">More about the LCMS</a>
             </div>
         </footer>
+        <script src="proj6.js"></script>
 
     </body>
 </html>
+
+<!--
+Form validation is an extremely important factor to consider when creating web forms.
+Text fields for information such as names, and addresses are fairly open in what users can 
+input, thus making these fields vulnerable to attack such as Cross-site scripting (XSS). XSS
+is a malicious attack on a web server by injecting harmful scripts into text inputs, thus embedding
+them into the webpage. These scripts will then be run when someone utilizes the page, and could result
+in data theft or viruses. 
+
+The best way to protect against XSS is through form validation. This can be a simple as limiting how much
+control an end user has over the data they input into a web form by choosing to utilize radio buttons
+or dropdown lists instead of open text fields. However, in the case that text fields are needed, then 
+practices such as regular expressions and data cleaning can be utilized. Regular expressions specify a range or 
+type of characters that are allowed, and the value of a text field is tested against that regular expression
+before the information is submitted to the server. For name fields, an appropiate regular expression would specify
+that only alphabet characters, spaces, and dashes are allowed.
+
+-->
