--- a/events.html
+++ b/events.html
@@ -22,12 +22,13 @@
             <a href="events.html" class="w3-bar-item w3-button">Events</a>
             <a href="rides.html" class="w3-bar-item w3-button">Carpool</a>
             <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
+            <a href="game.html" class="w3-bar-item w3-button">Game</a>
         </div>
     </nav>
 
     <div class="w3-theme3" id="first">
         <div id="second" style="text-align: center;">
-            <h1 id="welcome" class="w3-theme1">Events</h1>
+            <h1 class="welcome">Events</h1>
         <p>
             We have multiple events every week so that we can stay connected during our time at LU. We all know that 
             its a bit of a challenge being an LCMS Lutheran at Liberty University, so these events are a valuable way to spend time reminding
@@ -65,6 +66,8 @@
         </div>
     </footer>
     <script src="proj6.js"></script>
+    <script src="proj7.js"></script>
+    <script src="proj9.js" defer></script>
 
 </body>
 
