--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,13 @@
                 <a href="events.html" class="w3-bar-item w3-button">Events</a>
                 <a href="rides.html" class="w3-bar-item w3-button">Carpool</a>
                 <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
+                <a href="game.html" class="w3-bar-item w3-button">Game</a>
             </div>
         </nav>
 
         <div id="first" class="w3-theme3">
             <div id="second">
-                <h1 id="welcome" class="w3-theme1">Contact Us!</h1>
+                <h1 class="welcome">Contact Us!</h1>
 
             <p>If you have any questions, or would like to get involved, please do not hesitate to reach out! We will get 
                 back to you as soon as possible, and we can't wait to meet you! Enter your information below so we can get in touch with you!
@@ -70,9 +71,13 @@
                     <input type="tel" name="user_phone" id="user_phone">
                 </fieldset>
 
-                <fieldset name="year" class="contact_forms">
-                    <legend>Select your expected graduation date</legend>
-                    <input type="month" name="graddate">
+
+                <fieldset name="bio" class="contact_forms">
+                    <legend>Want us to know more about you? Submit a .txt bio here!</legend>
+                    <input type="file" id="user_bio">
+                    <div id="text_display">
+                        Your bio will be displayed here!
+                    </div>
                 </fieldset>
 
                 <input type="submit" value="Submit">
@@ -93,24 +98,7 @@
             </div>
         </footer>
         <script src="proj6.js"></script>
-
+        <script src="proj7.js"></script>
+        <script src="proj9.js" defer></script>
     </body>
 </html>
-
-<!--
-Form validation is an extremely important factor to consider when creating web forms.
-Text fields for information such as names, and addresses are fairly open in what users can 
-input, thus making these fields vulnerable to attack such as Cross-site scripting (XSS). XSS
-is a malicious attack on a web server by injecting harmful scripts into text inputs, thus embedding
-them into the webpage. These scripts will then be run when someone utilizes the page, and could result
-in data theft or viruses. 
-
-The best way to protect against XSS is through form validation. This can be a simple as limiting how much
-control an end user has over the data they input into a web form by choosing to utilize radio buttons
-or dropdown lists instead of open text fields. However, in the case that text fields are needed, then 
-practices such as regular expressions and data cleaning can be utilized. Regular expressions specify a range or 
-type of characters that are allowed, and the value of a text field is tested against that regular expression
-before the information is submitted to the server. For name fields, an appropiate regular expression would specify
-that only alphabet characters, spaces, and dashes are allowed.
-
--->
