--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="events.html" class="w3-bar-item w3-button">Events</a>
             <a href="rides.html" class="w3-bar-item w3-button">Carpool</a>
             <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
-            <a href="game.html" class="w3-bar-item w3-button">Game</a>
+            <a href="beliefs.html" class="w3-bar-item w3-button">What We Believe</a>
 
         </div>
     </nav>
