--- a/beliefs.html
+++ b/beliefs.html
@@ -21,8 +21,8 @@
             <a href="beliefs.html" class="w3-bar-item w3-button">What We Believe</a>
         </div>
         </nav>
-        <div class="w3-theme3" id="first">
-            <div id="second">
+        <div class="w3-theme3 first">
+            <div class="second">
             <h1 class="welcome">What We Believe</h1>
             <p>We hold to the Lutheran Confessions as stated in the Book of Concord. 
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat 
