--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
             </div>
         </nav>
 
-        <div id="first" class="w3-theme3">
-            <div id="second">
+        <div class="w3-theme3 first">
+            <div class="second">
                 <h1 class="welcome">Contact Us!</h1>
 
             <p>If you have any questions, or would like to get involved, please do not hesitate to reach out! We will get 
