--- a/events.html
+++ b/events.html
@@ -26,8 +26,8 @@
         </div>
     </nav>
 
-    <div class="w3-theme3" id="first">
-        <div id="second" style="text-align: center;">
+    <div class="w3-theme3 first">
+        <div class="second" style="text-align: center;">
             <h1 class="welcome">Events</h1>
         <p>
             We have multiple events every week so that we can stay connected during our time at LU. We all know that 
