--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
     </nav>
 
-    <div class="w3-theme3" id="first">
-        <div id="second">
+    <div class="w3-theme3 first">
+        <div class="second">
         <h1 class="welcome">Welcome!</h1>
             <p>
                 Greetings! We are the LCMS Lutherans of Liberty University! There aren't very many of us, but we are growing every year.
