--- a/rides.html
+++ b/rides.html
@@ -25,8 +25,8 @@
         </div>
     </nav>
 
-    <div class="w3-theme3" id="first">
-        <div id="second">
+    <div class="w3-theme3 first">
+        <div class="second">
             <h1 class="welcome">Carpool</h1>
         <p>
             Every Sunday, we coordinate rides to make sure that everyone who wants to come to church can come. Whether you need a ride, or can give a ride, please 
