--- a/rides.html
+++ b/rides.html
@@ -15,7 +15,7 @@
 
 
     <!--Reworked the form to use jQuery to hide/show parts of the form instead of 
-    the clumsy javascript method-->
+    the clumsy javascript method previously implemented-->
     <script>
         $(document).ready(function(){
             $('#give').click(function() {
