--- a/beliefs.html
+++ b/beliefs.html
@@ -31,30 +31,30 @@
                 to the Bible as the inspired and inerrant Word of God and the sole source of authority for faith and
                 life. Central to LCMS teaching is the doctrine of justification by grace through faith in Christ alone,
                 affirming that salvation is a free gift of God's grace, received through faith in Jesus' life, death,
-                and resurrection. <br>
+                and resurrection. </p>
 
-               LCMS adheres to the Book of Concord (1580), a collection of Lutheran confessions, as an accurate
+                <p>The LCMS adheres to the Book of Concord (1580), a collection of Lutheran confessions, as an accurate
                 interpretation of Scripture. The church emphasizes the proper distinction between Law and Gospel, with
                 the Law showing humans their sin and need for a Savior and the Gospel proclaiming the forgiveness and
-                salvation offered in Christ.<br>
+                salvation offered in Christ.</p>
 
-                The Sacraments play a vital role in LCMS theology. Baptism is seen as a means of grace that grants
+                <p>The Sacraments play a vital role in LCMS theology. Baptism is seen as a means of grace that grants
                 forgiveness, faith, and eternal life, including for infants. The Lord's Supper (Holy Communion) is
                 regarded as the true body and blood of Christ, given for the forgiveness of sins, and is practiced with
-                a closed communion policy, inviting only those who share LCMS beliefs.<br>
+                a closed communion policy, inviting only those who share LCMS beliefs.</p>
 
-                LCMS upholds traditional views on marriage, human sexuality, and life issues, teaching that marriage is
+                <p>LCMS upholds traditional views on marriage, human sexuality, and life issues, teaching that marriage is
                 a union between one man and one woman, and life is sacred from conception. The church maintains a
                 male-only pastorate, citing scriptural directives, while recognizing the valuable service of women in
-                other roles.<br>
+                other roles.</p>
 
-                Worship in LCMS congregations is liturgical, centered on Word and Sacrament. The church emphasizes
-                catechesis (teaching of the faith), missionary outreach, and the importance of Christian education.<br>
+                <p>Worship in LCMS congregations is liturgical, centered on Word and Sacrament. The church emphasizes
+                catechesis (teaching of the faith), missionary outreach, and the importance of Christian education.</p>
 
-                The LCMS fosters a strong commitment to doctrinal purity and confessional integrity, encouraging members to live
-                according to biblical teachings and to proclaim the Gospel faithfully in all aspects of life.<br>
+                <p>The LCMS fosters a strong commitment to doctrinal purity and confessional integrity, encouraging members to live
+                according to biblical teachings and to proclaim the Gospel faithfully in all aspects of life.</p>
             
-                Form more information on our beliefs, feel free to contact us, or visit <a href="https://catechism.cph.org/">Luther's Small Catechism</a></p>
+                <p>Form more information on our beliefs, feel free to contact us, or visit <a href="https://catechism.cph.org/">Luther's Small Catechism</a></p>
         </div>
         </div>
  
